<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:layout_width="match_parent"
              android:background="#ffffff"
              android:layout_marginLeft="60dp"
              android:layout_marginRight="60dp"
              android:layout_height="match_parent">


    <TextView
        android:text="@string/pop_decive_title"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/txt_color"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />
    <TextView
        android:text="@string/pop_decive_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_height="60dp"
        android:id="@+id/textView3"/>
    <View android:layout_width="match_parent"
          android:background="@color/bg_gray"
          android:layout_height="0.5dp">

    </View>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <TextView
            android:id="@+id/decive_setting"
            android:text="@string/pop_decive_confrim"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/btn_press"
            android:layout_height="45dp"
        />
        <View android:layout_width="0.5dp"
              android:background="@color/bg_gray"
              android:layout_height="match_parent">

        </View>
        <TextView
            android:id="@+id/decive_ok"
            android:text="@string/pop_decive_cancle"
            android:gravity="center"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:textColor="@color/btn_press"
            android:layout_weight="1"
            android:layout_height="45dp"
        />

    </LinearLayout>
</LinearLayout>