<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_marginRight="90dp"
              android:layout_marginLeft="90dp"
              android:background="#ffffff"
              android:layout_height="match_parent">



    <TextView
        android:text="@string/pop_music_title"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/txt_color"
        android:layout_width="match_parent"
        android:layout_height="45dp"
    />
   <LinearLayout
       android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="180dp">
       <TextView
           android:id="@+id/musci_left"
           android:text="@string/pop_music_left"
           android:gravity="center"
           android:textSize="16sp"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
       />

       <com.hg.jacob.lvdao.widget.WheelView

           android:id="@+id/music_wheel"
           android:layout_margin="12dp"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent">

       </com.hg.jacob.lvdao.widget.WheelView>
       <TextView
           android:id="@+id/musci_right"
           android:text="@string/pop_music_right"
           android:gravity="center"
           android:textSize="16sp"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
       />

   </LinearLayout>
    <View android:layout_width="match_parent"
          android:background="@color/bg_gray"
          android:layout_height="0.5dp">

    </View>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <TextView
            android:id="@+id/decive_setting"
            android:text="@string/pop_music_cancle"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/btn_press"
            android:layout_height="45dp"
        />
        <View android:layout_width="0.5dp"
              android:background="@color/bg_gray"
              android:layout_height="match_parent">

        </View>
        <TextView
            android:id="@+id/decive_ok"
            android:text="@string/pop_music_confrim"
            android:gravity="center"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:textColor="@color/btn_press"
            android:layout_weight="1"
            android:layout_height="45dp"
        />

    </LinearLayout>
</LinearLayout>