<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_method_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hg.jacob.lvdao.activity.MethodMsgActivity">


    <include layout="@layout/top_menu"></include>

    <LinearLayout
        android:id="@+id/base_msg"
        android:layout_below="@+id/lauou_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:text="@string/add_method_name"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/txt_color_3"/>

           <EditText
               android:background="@null"
               android:hint="@string/hint_method_name"
               android:layout_alignParentRight="true"
               android:layout_centerVertical="true"
               android:layout_marginRight="8dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/add_method_name"
               android:textColor="@color/txt_color_2"
               android:textSize="14sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:text="@string/add_method_symptom"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/txt_color_3"/>

            <EditText
                android:background="@null"
                android:hint="@string/hint_method_symtom"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_method_acup"
                android:textColor="@color/txt_color_2"
                android:textSize="14sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="45dp">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:textColor="@color/txt_color_3"
                    android:text="@string/add_method_acup"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <GridView
                        android:layout_gravity="right"
                        android:id="@+id/grid_chose"
                        android:horizontalSpacing="4dp"
                        android:numColumns="2"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content">

                    </GridView>
                    <EditText

                        android:id="@+id/hint_acup_chosed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textColor="@color/txt_color_2"
                        android:textSize="14sp"
                        android:layout_gravity="center|right"
                        android:hint="@string/hint_method_acup"/>


                </FrameLayout>


            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


    <!--中间主体-->
    <LinearLayout
        android:id="@+id/cure_msg"
        android:layout_below="@+id/base_msg"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="30dp">

        <TextView
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/list_acup"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/list_model"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/list_rate"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/list_strong"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/list_time"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@color/bg_cure"
        android:layout_below="@+id/cure_msg"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="60dp">

        <TextView
             android:text="1"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/add_acup"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/add_model"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/add_rate"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/add_strong"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/add_time"
            android:gravity="center"
            android:textSize="@dimen/content_txt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="60dp"
        android:id="@+id/btn_save"
        android:gravity="center"
        android:background="@drawable/bg_cure_btn"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:text="@string/add_method_save"
            android:gravity="center"
            android:textSize="@dimen/chosed_acup"
            android:textColor="@color/btn_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>
