<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.hg.jacob.lvdao.activity.LoginActivity">

    <include layout="@layout/top_menu"></include>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:layout_height="0dp">



    <LinearLayout
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="45dp">

        <ImageView android:layout_width="32dp"
                   android:layout_height="32dp"
                   android:layout_marginLeft="5dp"
        android:src="@drawable/login_mobile"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/login_mobile"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:hint="@string/login_account"
            android:background="@null"
                  android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="4dp"
          android:orientation="horizontal"
                android:layout_width="match_parent"
          android:gravity="center_vertical"
                  android:layout_height="45dp">

        <ImageView android:layout_width="32dp"
                   android:layout_height="32dp"
                   android:layout_marginLeft="5dp"
                   android:src="@drawable/login_pass"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/login_pass"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:hint="@string/login_pass"
            android:background="@null"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
                    android:layout_height="45dp">
        <TextView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:id="@+id/forget_pass"
            android:textSize="14sp"
            android:text="@string/login_fpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>




    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:layout_height="0dp">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/login"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/bg_cure_btn"
            android:layout_height="50dp">

            <TextView
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/btn_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:textColor="@color/btn_press"
                android:layout_centerInParent="true"
                android:layout_marginRight="12dp"
                android:id="@+id/sign_up"
                android:textSize="14sp"
                android:text="@string/login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
