<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_regist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.hg.jacob.lvdao.activity.RegistActivity">


    <include layout="@layout/top_menu"></include>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:layout_height="0dp">

    <LinearLayout
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="45dp">

        <ImageView android:layout_width="32dp"
                   android:layout_height="32dp"
                   android:layout_marginLeft="5dp"
                   android:src="@drawable/login_mobile"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/regist_mobile"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:hint="@string/login_account"
            android:background="@null"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <ImageView
            android:id="@+id/login_iv"
            android:layout_width="32dp"
                   android:layout_height="32dp"
                   android:layout_marginLeft="5dp"
                   android:layout_alignParentLeft="true"
                   android:layout_centerVertical="true"
                   android:src="@drawable/login_code"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/regist_code"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/login_iv"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:hint="@string/login_code"
            android:background="@null"
            android:layout_height="match_parent"/>

        <LinearLayout

            android:id="@+id/get_code"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_cure_btn"
            android:layout_width="80dp"
            android:layout_marginRight="10dp"
            android:layout_height="40dp">

            <TextView
                android:textSize="14sp"
                android:text="@string/login_gcode"
                android:layout_width="wrap_content"
                android:textColor="@color/btn_press"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="45dp">

        <ImageView android:layout_width="32dp"
                   android:layout_height="32dp"
                   android:layout_marginLeft="5dp"
                   android:src="@drawable/login_pass"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/regist_pass"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:hint="@string/login_pass"
            android:background="@null"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="45dp">
        <ImageView android:layout_width="32dp"
                   android:layout_height="32dp"
                   android:layout_marginLeft="5dp"
                   android:src="@drawable/login_pass"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/regist_pass_agin"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:hint="@string/login_apass"
            android:background="@null"
            android:layout_height="match_parent"/>
    </LinearLayout>



    </LinearLayout>


   <LinearLayout android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_height="0dp">

       <LinearLayout
           android:id="@+id/regist"
           android:layout_marginTop="60dp"
           android:layout_marginLeft="18dp"
           android:layout_marginRight="18dp"
           android:layout_width="match_parent"
           android:gravity="center"
           android:background="@drawable/bg_cure_btn"
           android:layout_height="50dp">

           <TextView
               android:text="@string/pop_cconfrim"
               android:textSize="18sp"
               android:textColor="@color/btn_press"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>




       </LinearLayout>

   </LinearLayout>


</LinearLayout>
